--- a/package.json
+++ b/package.json
@@ -35,29 +35,30 @@
   "homepage": "https://ng-semantic.herokuapp.com/",
   "license": "MIT",
   "devDependencies": {
-    "@angular/common": "^2.0.1",
-    "@angular/compiler": "^2.0.1",
-    "@angular/core": "^2.0.1",
-    "@angular/forms": "^2.0.1",
-    "@angular/http": "^2.0.1",
-    "@angular/platform-browser": "^2.0.1",
-    "@angular/platform-browser-dynamic": "^2.0.1",
-    "@angular/router": "^3.0.0",
-    "@angular/upgrade": "^2.0.1",
-    "@types/jasmine": "^2.5.36",
-    "@types/jquery": "^2.0.34",
-    "@types/node": "^6.0.46",
+    "@angular/common": "^4.2.3",
+    "@angular/compiler": "^4.2.3",
+    "@angular/compiler-cli": "^4.2.3",
+    "@angular/core": "^4.2.3",
+    "@angular/forms": "^4.2.3",
+    "@angular/http": "^4.2.3",
+    "@angular/platform-browser": "^4.2.3",
+    "@angular/platform-browser-dynamic": "^4.2.3",
+    "@angular/router": "^4.2.3",
+    "@angular/upgrade": "^4.2.3",
+    "@types/jquery": "^3.1.1",
+    "@types/jasmine": "^2.2.34",
+    "@types/node": "^6.0.60",
     "angular2-in-memory-web-api": "0.0.20",
-    "codelyzer": "1.0.0-beta.4",
-    "concurrently": "^2.2.0",
+    "codelyzer": "~2.0.0",
+    "concurrently": "^2.0.0",
     "core-js": "^2.4.1",
     "lite-server": "^2.2.2",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "^5.4.1",
     "systemjs": "^0.19.27",
     "systemjs-builder": "^0.15.26",
-    "tslint": "^3.14.0",
-    "typescript": "^2.0.2",
-    "zone.js": "^0.6.23"
+    "tslint": "^4.5.1",
+    "typescript": "^2.4.0",
+    "zone.js": "^0.8.4"
   }
 }
