--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "es6",
     "target": "es5",
     "moduleResolution": "node",
     "lib": [
-      "es2015",
+      "es2016",
       "dom"
     ],
     "noImplicitAny": true,
