--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "inlineSourceMap": false,
     "removeComments": true,
     "emitDecoratorMetadata": true,
+    "noUnusedLocals": true,
     "experimentalDecorators": true
   },
   "typeRoots": [
