--- a/package.json
+++ b/package.json
@@ -35,30 +35,33 @@
   "homepage": "https://ng-semantic.herokuapp.com/",
   "license": "MIT",
   "devDependencies": {
-    "@angular/common": "^4.2.3",
-    "@angular/compiler": "^4.2.3",
-    "@angular/compiler-cli": "^4.2.3",
-    "@angular/core": "^4.2.3",
-    "@angular/forms": "^4.2.3",
-    "@angular/http": "^4.2.3",
-    "@angular/platform-browser": "^4.2.3",
-    "@angular/platform-browser-dynamic": "^4.2.3",
-    "@angular/router": "^4.2.3",
-    "@angular/upgrade": "^4.2.3",
-    "@types/jquery": "^3.1.1",
-    "@types/jasmine": "^2.2.34",
-    "@types/node": "^6.0.60",
-    "angular2-in-memory-web-api": "0.0.20",
-    "codelyzer": "~2.0.0",
-    "concurrently": "^2.0.0",
-    "core-js": "^2.4.1",
-    "lite-server": "^2.2.2",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "^5.4.1",
-    "systemjs": "^0.19.27",
-    "systemjs-builder": "^0.15.26",
-    "tslint": "^4.5.1",
-    "typescript": "^2.4.0",
-    "zone.js": "^0.8.4"
+    "@angular/common": "^7.2.3",
+    "@angular/compiler": "^7.2.3",
+    "@angular/compiler-cli": "^7.2.3",
+    "@angular/core": "^7.2.3",
+    "@angular/forms": "^7.2.3",
+    "@angular/http": "^7.2.3",
+    "@angular/platform-browser": "^7.2.3",
+    "@angular/platform-browser-dynamic": "^7.2.3",
+    "@angular/router": "^7.2.3",
+    "@angular/upgrade": "^7.2.3",
+    "@types/jasmine": "^3.3.8",
+    "@types/jquery": "^3.3.2",
+    "@types/node": "^10.1.1",
+    "codelyzer": "~4.5.0",
+    "concurrently": "^4.1.0",
+    "core-js": "^2.5.6",
+    "lite-server": "^2.4.0",
+    "reflect-metadata": "^0.1.12",
+    "rxjs": "^6.1.0",
+    "systemjs": "^3.0.0",
+    "systemjs-builder": "^0.16.13",
+    "tslint": "^5.10.0",
+    "typescript": "^3.2.4",
+    "zone.js": "^0.8.26"
+  },
+  "dependencies": {
+    "@angular/animations": "^7.2.3",
+    "@angular/platform-server": "^7.2.3"
   }
 }
